Finished Day Rater/Temp Task Journal

--- a/task-manager/demo/index.html
+++ b/task-manager/demo/index.html
@@ -7,8 +7,6 @@
   <meta name="author" content="Frozon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="./index.js"></script>
   <link rel="stylesheet" href="./sources/styles.css" />
   <link rel="stylesheet" href="./sources/calender.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" crossorigin="anonymous">
@@ -22,9 +20,9 @@
       <li><a class="active" href="/">Home</a></li>
       <li><a href="/signup">Signup</a></li>
       <li><a href="/login">Login</a></li>
-      <li><a href="javascript:this.click();" id='logout-button'>Logout</a></li>
-      <li><a href="javascript:this.click();" id='user-button'>Fetch</a></li>
-      <li class="header-text">Bullet Journal</li>
+      <li><a href="/logout" id='logout-button'>Logout</a></li>
+      <li><a href="/demo">Demo</a></li>
+      <li class="header-text">Bullet Journal | Demo</li>
     </ul>
     <div class="header"></div>
   </header>
@@ -133,7 +131,6 @@
 
   <!-- Main Script -->
   <script src="./sources/scripts/script.js" type="module"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
 </body>
 
 </html>
